# mythic-proportion

./: .gitignore  HANDOFF.md  LLM Wiki Second Brain with 3D Interactive Knowledge Graph  Technical Architecture Blueprint.md  Makefile  README.md  pyproject.toml
demo-vault/: hot.md  index.md  schema.md
demo-vault/.obsidian/: app.json  core-plugins.json  graph.json
demo-vault/_templates/: concept.md  entity.md  session.md  source.md
demo-vault/wiki/: log.md
demo-vault/wiki/entities/: acme-robotics.md  falcon-arm.md  halcyon-thruster.md  meridian-logistics.md  orbital-dynamics.md  redacted-person-1.md  redacted-person-2.md  redacted-person-3.md  redacted-person-4.md  redacted-person-5.md  redacted-person-6.md  redacted-person-7.md
demo-vault/wiki/sources/: acme-robotics-project-notes.md  orbital-dynamics-background.md
docs/: CHANGELOG.md  architecture.md  faq-graphrag-extraction-fixes.md  frontend.md  harness-ingest.md  obsidian.md  usage.md
docs/security/: control-matrix.md  data-classification.md  sbom.md  security-advisory-graphrag-extraction-20260712.md  threat-model.md
scripts/: ingest_harness.py
specs/: ROADMAP-BRIEF.md  mythic-proportion-3d-graphrag.html  mythic-proportion-3d-graphrag.image-prompts.md  mythic-proportion.html  mythic-proportion.image-prompts.md  parity-checklist.md
src/mythic_proportion/: __init__.py  config.py  harness_ingest.py
src/mythic_proportion/agents/: __init__.py
src/mythic_proportion/cli/: __init__.py  app.py
src/mythic_proportion/compile/: __init__.py  client.py  graph.py  models.py  pipeline.py  prompt.py  writer.py
src/mythic_proportion/graph/: __init__.py  cache.py  centrality.py  chunk.py  claims.py  communities.py  extract.py  index.py  reports.py  store.py  tuples.py
src/mythic_proportion/index/: __init__.py  embeddings.py  retrieve.py  schema.sql  store.py
src/mythic_proportion/ingest/: __init__.py  dedup.py  docling_adapter.py  markitdown_adapter.py  models.py  pipeline.py  router.py
src/mythic_proportion/llm/: __init__.py  authhub.py  ollama.py
src/mythic_proportion/mcp/: __init__.py
src/mythic_proportion/privacy/: __init__.py  redact.py
src/mythic_proportion/query/: __init__.py  client.py  (+3 more)
tests/: test_authhub.py  test_base_install_no_extras.py  test_centrality.py  test_cli_compile.py  test_cli_index_graph.py  test_communities.py  test_compile.py  test_dedup.py  test_e2e.py  test_egress_gate.py  test_graph.py  test_graph_extraction_egress.py  test_harness_ingest.py  test_index.py  test_lint.py  test_local_mode.py  test_obsidian_polish.py  test_ollama.py  test_pipeline.py  test_privacy_redact.py  test_query.py  test_query_modes.py  test_router.py  test_vault_init.py  test_watcher.py  test_web.py  test_web_config.py  test_web_jobs.py  test_web_pages.py  test_web_security.py
web/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/src/: App.tsx
(+143 files in other folders)
