[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mythic-proportion"
version = "0.1.0"
description = "An LLM-Wiki second brain with an auto-ingesting drop folder."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mythic Proportion contributors" }]

dependencies = [
    "typer>=0.12",
    "pydantic>=2",
    "pydantic-settings>=2",
    "rich",
]

[project.optional-dependencies]
ingest = ["docling", "markitdown"]
embeddings = ["fastembed"]
llm = ["anthropic>=0.40"]
authhub = ["httpx"]
watch = ["watchdog"]
web = ["fastapi", "uvicorn"]
dev = ["pytest", "pytest-cov", "ruff", "mypy", "httpx"]
# 3D GraphRAG expansion extras (declared in Phase 0; wired up per-phase as
# each sub-package below gains real logic — see specs/ROADMAP-BRIEF.md §3 and
# specs/mythic-proportion-3d-graphrag.html). All heavy imports inside
# `graph/`, `privacy/`, `agents/`, `mcp/` stay lazy so the base install
# remains unaffected by these declarations.
graphrag = ["graspologic"]
privacy = ["presidio-analyzer", "presidio-anonymizer"]
local = ["httpx"]
mcp = ["fastmcp"]
agents = ["pydantic-ai"]

[project.scripts]
mythic = "mythic_proportion.cli.app:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mythic_proportion.index" = ["schema.sql"]
"mythic_proportion.web" = ["static/*", "static_next/**/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
packages = ["mythic_proportion"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
